# Apex-Erp-Direct-Debit

./: README.md  pyproject.toml
apex_erp_direct_debit/: hooks.py  install.py  modules.txt  patches.txt  tasks.py
apex_erp_direct_debit/api/: __init__.py  mandate.py  webhook.py
apex_erp_direct_debit/direct_debit/: __init__.py
apex_erp_direct_debit/direct_debit/doctype/: __init__.py
apex_erp_direct_debit/direct_debit/doctype/dd_debt/: dd_debt.json  dd_debt.py  dd_debt_dashboard.py  dd_debt_list.js
apex_erp_direct_debit/direct_debit/doctype/dd_installment_schedule/: dd_installment_schedule.json  dd_installment_schedule.py
apex_erp_direct_debit/direct_debit/doctype/dd_mandate/: dd_mandate.json  dd_mandate.py  dd_mandate_dashboard.py
apex_erp_direct_debit/direct_debit/doctype/dd_notification_log/: __init__.py  dd_notification_log.json  dd_notification_log.py
apex_erp_direct_debit/direct_debit/doctype/dd_reconciliation_report/: dd_reconciliation_report.json  dd_reconciliation_report.py
apex_erp_direct_debit/direct_debit/doctype/dd_settings/: dd_settings.json  dd_settings.py
apex_erp_direct_debit/doctype_changes/: __init__.py  customer_custom.py  payment_entry_custom.py  sales_invoice_custom.py
apex_erp_direct_debit/fixtures/: custom_field.json
apex_erp_direct_debit/public/js/: customer_custom.js  dd_debt_custom.js  dd_mandate_custom.js  sales_invoice_custom.js
apex_erp_direct_debit/services/: __init__.py  base.py  hubtel_service.py  kolectpay_bridge.py  provider_factory.py  smcollect_bridge.py
(+5 files in other folders)
