[project]
name = "apex_erp_direct_debit"
authors = [
    { name = "Apex", email = "" }
]
description = "Hubtel Direct Debit integration for ERPNext — Bridge (KolectPay/SMCollect) and Direct (Hubtel) modes"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Add dev dependencies here
